Updated skills-boxes css to include 100% width and height, which has fixed stretching

--- a/styles.css
+++ b/styles.css
@@ -119,18 +119,18 @@ footer {
 }
 
 .skills-boxes {
-   display: flex;
-   flex-direction: column;
+    display: flex;
+    flex-direction: column;
     width: 300px;
     height: 300px;
     margin: 10px;
-    border: 5px solid #ffffff;
+    border: 2px solid #ffffff;
     background-color: lightgrey;
     position: relative;
 }
 
 .skills-boxes:hover {
-    border: 10px solid #ffffff;
+    border: 2px solid #000;
 }
 
 .skills-boxes h3 {
